...
            ),
            const Spacer(),
            ListTile(
              onTap: () async {
                ref.watch(authControllerProvider.notifier).signOut();
              },
              title: const Text('L O G O U T'),
              leading: Icon(Icons.logout, color: Colors.grey[600]),
            ),
          ],
        ),
      ),
    );
...
