...

                    const SizedBox(height: 24),

                    // submit button
                    AuthSubmitButton(
                      submit: submit,
                      title: 'Sign up',
                      isAuthenticating: authState.isLoading,
                    ),

                    const SizedBox(height: 20),

                    // switching between login and sign up modes
...
